--- a/.env
+++ b/.env
@@ -20,12 +20,21 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=churchmembers
+# DB_USERNAME=root
+# DB_PASSWORD=
+
+# online::
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=churchmembers
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=kkktmjim_db
+DB_USERNAME=kkktmjim_admin
+DB_PASSWORD=+PAS)L^p*7nR
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
